--- a/index.html
+++ b/index.html
@@ -2,14 +2,21 @@
 <html>
     <head>
         <script src="js/scripts.js" type="text/javascript"></script>
+        <style>
+
+        </style>
     </head>
     <body>
-        <header>
-
-        </header>
-
-        <footer>
-
-        </footer>
+        <header></header>
+        <div class="scoreboard flex-container">
+            <div class="playerScore">0</div>
+            <div class="computerScore">0</div>
+        </div>
+        <div class="rps-buttons flex-container">
+            <button class="rock" id="rock"></button>
+            <button class="paper" id="paper"></button>
+            <button class="scissors" id="scissors"></button>
+        </div>
+        <footer></footer>
     </body>
 </html>
