--- a/index.html
+++ b/index.html
@@ -2,6 +2,19 @@
 <html>
     <head>
         <script src="js/scripts.js" type="text/javascript"></script>
+        <script>
+        const rockBtn = document.querySelector('#rock');
+        const paperBtn = document.querySelector('#paper');
+            const scissorsBtn = document.querySelector('#scissors');
+            rockBtn.addEventListener('click', () => {
+                console.log("clicked Rock")
+            });
+            paperBtn.addEventListener('click', () => {
+                console.log("clicked Paper")
+            });
+            scissorsBtn.addEventListener('click', () => {
+                console.log("clicked Scissors")
+            });</script>
     </head>
     <body>
         <header></header>
@@ -10,9 +23,9 @@
             <div class="computerScore">0</div>
         </div>
         <div class="rps-buttons flex-container">
-            <button class="rock" id="rock"></button>
-            <button class="paper" id="paper"></button>
-            <button class="scissors" id="scissors"></button>
+            <button class="rock" id="rock">Rock</button>
+            <button class="paper" id="paper">Paper</button>
+            <button class="scissors" id="scissors">Scissors</button>
         </div>
         <footer></footer>
     </body>
