--- a/index.html
+++ b/index.html
@@ -2,19 +2,6 @@
 <html>
     <head>
         <script src="js/scripts.js" type="text/javascript"></script>
-        <script>
-        const rockBtn = document.querySelector('#rock');
-        const paperBtn = document.querySelector('#paper');
-            const scissorsBtn = document.querySelector('#scissors');
-            rockBtn.addEventListener('click', () => {
-                console.log("clicked Rock")
-            });
-            paperBtn.addEventListener('click', () => {
-                console.log("clicked Paper")
-            });
-            scissorsBtn.addEventListener('click', () => {
-                console.log("clicked Scissors")
-            });</script>
     </head>
     <body>
         <header></header>
@@ -27,6 +14,6 @@
             <button class="paper" id="paper">Paper</button>
             <button class="scissors" id="scissors">Scissors</button>
         </div>
-        <footer></footer>
+        <footer> <script src="js/scripts.js" defer type="text/javascript"></script></footer>
     </body>
 </html>
