--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
-       
+        <script src="js/scripts.js" defer type="text/javascript"></script>
     </head>
     <body>
         <header></header>
@@ -14,6 +14,7 @@
             <button class="paper" id="paper">Paper</button>
             <button class="scissors" id="scissors">Scissors</button>
         </div>
-        <footer> <script src="js/scripts.js" defer type="text/javascript"></script></footer>
+        <footer>
+        </footer>
     </body>
 </html>
